<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".add_blog_activity">

        <TextView
            android:id="@+id/create_blog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/create_a_new_blog"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/add_blog_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/addTitle"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/add_blog_imageView"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            app:srcCompat="@drawable/addimage" />

        <Button
            android:id="@+id/imageslt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#74C69D"
            android:text="@string/selectimage" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/addDesc"
            android:textColor="@color/m3_hint_foreground"
            android:textSize="18sp" />

        <net.dankito.richtexteditor.android.toolbar.AllCommandsEditorToolbar
            android:id="@+id/editorToolbar"
            android:layout_width="220dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="#74C69D" />

        <net.dankito.richtexteditor.android.RichTextEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/submit_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#74C69D"
            android:text="@string/submit" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>