<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8F3DC"
        tools:context=".full_blog_activity">

        <TextView
            android:id="@+id/full_blog_username"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/username"
            android:textColor="#454141"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/full_blog_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/full_blog_title"
            tools:ignore="TextSizeCheck" />


        <ImageView
            android:id="@+id/blog_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_blog_username"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/full_blog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/full_blog_profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/blog_image_view"
            app:layout_constraintEnd_toStartOf="@+id/full_blog_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_blog_title"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/full_blog_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="353dp"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blog_image_view"
            app:layout_constraintVertical_bias="0.175" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>